create env var to enable change of dl method

--- a/README.Rmd
+++ b/README.Rmd
@@ -177,6 +177,20 @@ nonreadable <- dplyr::select(nonreadable, `Table title` = title, table_no = no, 
 knitr::kable(nonreadable )
 ```
 
+## Resolving network issues by manually setting the download method
+
+Certain corporate networks restrict your ability to download files in an R session. On some of these networks, the `"wininet"` method must be used when downloading files. Users can specify the method that will be used to download files by setting the `"R_READRBA_DL_METHOD"` environment variable. 
+
+For example, the following code sets the environment variable for your current session: 
+
+```{r, eval = FALSE}
+Sys.setenv("R_READRBA_DL_METHOD" = "wininet")
+```
+
+You can add `"R_READRBA_DL_METHOD"` to your .Rprofile to have this persist across sessions.
+
+If you have other issues using `{readrba}` in your corporate environment, I would appreciate you opening an issue on GitHub.
+
 ## Issues and contributions
 
 I welcome any feature requests or bug reports. The best way is to file a [GitHub issue](https://github.com/MattCowgill/readrba/issues). 
